Fixed broken styles

--- a/inetum-realjobs-frontend/src/app/components/resume/forms/education-form/education-form.component.scss
+++ b/inetum-realjobs-frontend/src/app/components/resume/forms/education-form/education-form.component.scss
@@ -13,22 +13,17 @@
     "edu-desc-label edu-desc-input edu-desc-input edu-desc-input";
   margin-bottom: 1rem;
 
-  .form-inputs > label {
+  > label {
     display: flex;
     align-items: center;
   }
 
-  .form-inputs input {
+  input {
     width: 100%;
   }
 
   ::ng-deep .p-calendar {
     width: 100%;
-  }
-
-  .center-content {
-    display: flex;
-    justify-content: center;
   }
 
   .edu-deg-label {
@@ -122,4 +117,9 @@
 
 .education-list {
   margin-top: 1rem;
+}
+
+.educationForm .center-content {
+  display: flex;
+  justify-content: center;
 }
