--- a/inetum-realjobs-frontend/src/app/components/resume/forms/experience-form/experience-form.component.scss
+++ b/inetum-realjobs-frontend/src/app/components/resume/forms/experience-form/experience-form.component.scss
@@ -18,22 +18,17 @@
     margin-top: 1rem;
   }
 
-  .form-inputs > label {
+  > label {
     display: flex;
     align-items: center;
   }
 
-  .form-inputs input {
+  input {
     width: 100%;
   }
 
   ::ng-deep .p-calendar {
     width: 100%;
-  }
-
-  .center-content {
-    display: flex;
-    justify-content: center;
   }
 
   .exp-jt-label {
@@ -140,4 +135,9 @@
 
 .experience-form-header-text {
   margin: 1rem;
+}
+
+.experienceForm .center-content {
+  display: flex;
+  justify-content: center;
 }
